# fatigue_prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .zshrc  Dockerfile  LICENSE.txt  MLproject  README.md  constraints.txt  deployment.yml  dock-compose.yml  fatigue_prediction.code-workspace  justfile  main.py  pyproject.toml  python_env.yaml  python_model.pkl  requirements.txt  test_api.py
.github/actions/setup/: action.yml
.github/workflows/: check.yml  publish.yml
confs/: etl.yaml  evaluation.yaml  explanation.yaml  inference.yaml  inference_etl.yaml  monitor.yaml  promotion.yaml  training.yaml  tuning.yaml
notebooks/: feature_engineering.ipynb  inference.ipynb  processed.ipynb  prototype.ipynb
notes/: step.csv
src/fatigue/: coach.py  scripts.py  settings.py
src/fatigue/core/: metrics.py  models.py  schemas.py
src/fatigue/io/: configs.py  datasets.py  registries.py  services.py
src/fatigue/jobs/: __init__.py  base.py  dashboard.py  etl.py  evaluation.py  explanation.py  inference.py  inference_etl.py  monitoring.py  promotion.py  training.py  tuning.py
src/fatigue/utils/: signers.py
tasks/: check.just  clean.just  commit.just  doc.just  docker.just  format.just  install.just  mlflow.just  package.just  project.just
tests/: conftest.py  test_script.py
tests/confs/: evaluation.yaml  explanation.yaml  inference.yaml  promotion.yaml  training.yaml  tuning.yaml
tests/core/: test_metrics.py  test_models.py  test_schemas.py
tests/io/: test_configs.py  test_datasets.py  test_registries.py
tests/jobs/: test_evaluation.py  test_explanation.py  test_inference.py  test_promotion.py  test_training.py  test_tuning.py
tests/utils/: test_signers.py
