[project]
name = "fatigue_prediction"
version = "0.1.3"
description = "Use heart rate and sleep data to predict pvt, which is the indication of fatigue in different probabilities"
authors = [{ name = "Amy Shih", email = "cyshih30@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["mlops", "AI", "data engineering", "safety", "machine learning"]
requires-python = ">=3.9,<3.10"
dependencies = [
    "loguru>=0.7.3",
    "mlflow==2.11.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pandera>=0.23.0",
    "plotly<6.0.0",
    "plyer>=2.1.0",
    "psutil>=7.0.0",
    "pyarrow<16",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "pynvml>=12.0.0",
    "scikit-learn<1.6.0",
    "setuptools>=75.8.2",
    "shap",
    "hatchling<1.27",
    "optuna>=4.6.0",
    "numpy<2.0.0",
    "evidently==0.4.18",
    "scipy>=1.13.1",
    "apache-airflow<3.0",
    "azureml-mlflow>=1.61.0.post1",
    "seaborn>=0.13.2",
    "commitizen<4.0",
    "google-re2<1.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "bandit>=1.8.3",
    "coverage>=7.6.12",
    "mypy==1.7.1",
    "pandera[mypy]>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
    "commitizen>=3.0.0",
    "pre-commit>=4.1.0",
    "rust-just>=1.39.0",
    "pdoc>=15.0.1",
    "typing-extensions>=4.15.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-protobuf>=6.32.1.20251210",
]

notebook = ["ipykernel>=6.29.5", "nbformat>=5.10.4"]

[tool.uv]
default-groups = ["dev", "notebook"]

[tool.bandit]
targets = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
changelog_start_rev = "v1.0.0"
update_changelog_on_bump = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pandera.mypy", "pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

[tool.hatch.build.targets.wheel]
packages = ["src/fatigue"]

# SCRIPTS

[project.scripts]
fatigue = 'fatigue.scripts:main'

# SYSTEMS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true
